@@ -361,7 +361,11 @@ public abstract class AbstractCannonCastBlockEntity extends SmartBlockEntity imp
 			}
 			recipe.assembleInWorld(this.level, pos);
 
-			if (y > 0 && this.level.getBlockEntity(pos) instanceof ICannonBlockEntity<?> cbe && this.level.getBlockEntity(pos.below()) instanceof ICannonBlockEntity<?> cbe1) {
+			if (y > 0
+				&& this.level.getBlockEntity(pos) instanceof ICannonBlockEntity<?> cbe
+				&& cbe.cannonBehavior().canConnectToSide(Direction.DOWN)
+				&& this.level.getBlockEntity(pos.below()) instanceof ICannonBlockEntity<?> cbe1
+				&& cbe1.cannonBehavior().canConnectToSide(Direction.UP)) {
 				cbe.cannonBehavior().setConnectedFace(Direction.DOWN, true);
 				cbe1.cannonBehavior().setConnectedFace(Direction.UP, true);
 			}
